AC_CONFIG_MACRO_DIR([m4])

AC_INIT(aclocal.m4)
AM_INIT_AUTOMAKE(ghpsdr2, 1.01)
AM_CONFIG_HEADER(config.h:config.in)


AC_PREFIX_DEFAULT(/tmp/ghpsdr2)

dnl create only static libs to allow non-disted libs
AC_ENABLE_SHARED(no)
AC_ENABLE_STATIC(yes)

dnl create a working libtool-script
AM_PROG_LIBTOOL
dnl AC_LANG_CPLUSPLUS

all_libraries="$all_libraries $GHPSDR2_USER_LDFLAGS"
all_includes="$all_includes $GHPSDR2_USER_INCLUDES"
AC_SUBST(all_includes)
AC_SUBST(all_libraries)

AC_SUBST(AUTODIRS)

AC_MSG_CHECKING(whether to enable optimization)
AC_ARG_ENABLE(optimize, 
	[ --enable-optimize Turn on optimization],
	[case "${enableval}" in 
	 yes) optimize=true;;
	 no) optimize=false;;
	 *) AC_MSG_ERROR(bad value ${enableval} for --enable-optimize);;
	esac], [optimize=true])

AM_CONDITIONAL(NO_OPTIMIZE, test x$optimize = xtrue)

# Checks for libraries.
AC_CHECK_LIB([fftw3f], [fftwf_execute], ,
	[AC_MSG_ERROR("Could not find library fftw3f.")])
dnl AC_CHECK_LIB([jack], [jack_connect], ,
dnl 	[AC_MSG_ERROR("Could not find library jack.")])
AC_CHECK_LIB([m], [pow])
AC_CHECK_LIB([pthread], [pthread_create])

# Check some gtk libraries
PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.12])

# these show up in Makefile.am to get paths to gtk stuff
PACKAGE_CFLAGS="-g -Wall $GTK_CFLAGS"
PACKAGE_LIBS="-g $GTK_LIBS"
PACKAGE_LDFLAGS="-export-dynamic $GTK_LDFLAGS"

AC_SUBST([PACKAGE_CFLAGS])
AC_SUBST([PACKAGE_LIBS])
AC_SUBST([PACKAGE_LDFLAGS])
# Check for normal header files
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_HEADER_STDBOOL
AC_TYPE_UID_T

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_STAT
AC_CHECK_FUNCS([floor gettimeofday memset pow sqrt])

AC_OUTPUT
# turn on optimization
if test "x$optimize" = "xtrue"; then
         CXXFLAGS="-g -O3 -Wall"
AC_MSG_RESULT(yes)
else
CXXFLAGS="-g -Wall"
AC_MSG_RESULT(no)
fi

AC_OUTPUT(
   	Makefile 
	DttSP/Makefile
	src/Makefile
)
